tdf#160725 - Fix XLOOKUP has different result for approximate

search than Excel.

Some rework for xlookup binary search in rows to get the correct results
when we are searching with binary mode in rows.

Change-Id: I7ef710c4ae638e2cf5d4bee45810cec7057f5d4b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166451
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins